--- a/Session1-Kazan/EditPage.xaml
+++ b/Session1-Kazan/EditPage.xaml
@@ -6,28 +6,29 @@
              mc:Ignorable="d"
              x:Class="Session1_Kazan.EditPage">
     <ContentPage.Content>
-        <StackLayout Padding="10">
+        <StackLayout Padding="5">
             <Entry Placeholder="Asset Name"
                    x:Name="entryAssetName"></Entry>
-            <Grid>
-                <Picker x:Name="pDepartment" Title="Department" SelectedIndexChanged="pDepartment_SelectedIndexChanged"/>
-                <Picker x:Name="pLocation" Title="Location" Grid.Column="1"/>
-                <Picker x:Name="pAssetGroup" Title="Asset Group" SelectedIndexChanged="pAssetGroup_SelectedIndexChanged" Grid.Row="1"/>
-                <Picker x:Name="pAccountableParty" Title="Accountable Party" Grid.Column="1" Grid.Row="1"/>
+            <Grid HeightRequest="250">
+                <Picker x:Name="pDepartment" Title="Department" SelectedIndexChanged="pDepartment_SelectedIndexChanged"  HeightRequest="100" FontSize="Small"/>
+                <Picker x:Name="pLocation" Title="Location" Grid.Column="1" FontSize="Small"/>
+                <Picker x:Name="pAssetGroup" Title="Asset Group" SelectedIndexChanged="pAssetGroup_SelectedIndexChanged" Grid.Row="1" FontSize="Small"/>
+                <Picker x:Name="pAccountableParty" Title="Accountable Party" Grid.Column="1" Grid.Row="1" FontSize="Small"/>
             </Grid>
             <Label Text="Asset Description:"/>
             <Editor x:Name="editorAssetDescription" Placeholder="Enter Asset Description here"
-                    AutoSize="TextChanges"/>
+                    AutoSize="TextChanges" FontSize="Small"/>
             <Label Text="Date or End of Warranty"/>
-            <Grid>
-                <DatePicker x:Name="dpExpiredWarranty"/>
+            <Grid >
+                <DatePicker x:Name="dpExpiredWarranty"  HeightRequest="100" FontSize="Small"/>
                 <Label Text="Asset SN: " Grid.Column="1"/>
                 <Label Text="" x:Name="lblAsset" Grid.Column="2"/>
             </Grid>
             <Grid>
-                <Button Text="Capture" x:Name="btnCapture" Clicked="btnCapture_Clicked"/>
-                <Button Text="Browse" x:Name="btnBrowse" Clicked="btnBrowse_Clicked" Grid.Column="1" />
-                <ListView x:Name="lvImages">
+                <Button Text="Capture" x:Name="btnCapture" Clicked="btnCapture_Clicked"  HeightRequest="100" FontSize="Small"/>
+                <Button Text="Browse" x:Name="btnBrowse" Clicked="btnBrowse_Clicked" Grid.Column="1" FontSize="Small"/>
+            </Grid>
+            <ListView x:Name="lvImages">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -39,8 +40,9 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <Button Text="Submit" x:Name="btnSubmit" Clicked="btnSubmit_Clicked" Grid.Row="1"/>
-                <Button Text="Cancel" x:Name="btnCancel" Clicked="btnCancel_Clicked" Grid.Column="1" Grid.Row="1"/>
+            <Grid>
+                <Button Text="Submit" x:Name="btnSubmit" Clicked="btnSubmit_Clicked" Grid.Row="1"  HeightRequest="100" FontSize="Small"/>
+                <Button Text="Cancel" x:Name="btnCancel" Clicked="btnCancel_Clicked" Grid.Column="1" Grid.Row="1" FontSize="Small"/>
             </Grid>
             
         </StackLayout>
